--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "yt-scissors-cli",
-  "version": "1.0.4",
-  "description": "A simple cli-app that allows you to divide a YouTube video into multiple separate videos base on a video's time stamps. Created using FFmpeg, ytd-core, and freetube.",
+  "name": "youtube-scissors-cli",
+  "version": "0.0.1",
+  "description": "A simple cli-app that allows you to divide a YouTube video into multiple separate videos base on a video's time stamps. Power by pkg and @Guuzzeji yt-scissors npm library",
   "main": "index.js",
   "files": [
     "fetch",
-    "ffmpeg"
+    "ffmpeg-control"
   ],
   "engines": {
     "node": ">=12"
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/Guuzzeji/yt-scissors-cli"
+    "url": "git://github.com/Guuzzeji/youtube-scissors-cli"
   },
   "author": "Guuzzeji <gabe.business.code@outlook.com> (https://github.com/Guuzzeji)",
   "license": "MIT",
