--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "license": "MIT",
   "dependencies": {
     "@freetube/yt-comment-scraper": "^6.1.0",
-    "@terascope/fetch-github-release": "^0.8.7",
     "chalk": "^4.1.2",
     "figlet": "^1.5.2",
     "prompts": "^2.4.2",
@@ -38,7 +37,11 @@
   "bin": "index.js",
   "pkg": {
     "assets": "node_modules/**/*",
-    "targets": [ "node14-win-x64","node14-linux-x64","node14-macos-x64" ],
+    "targets": [
+      "node14-win-x64",
+      "node14-linux-x64",
+      "node14-macos-x64"
+    ],
     "outputPath": "build"
   }
 }
