Add / Fix comments
- Add / Fix comments on editor.js and index.js

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "youtube",
     "download",
     "video",
-    "ffmpeg"
+    "ffmpeg",
+    "cli",
+    "video-processing"
   ],
   "repository": {
     "type": "git",
