--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "yt-scissors-cli",
-  "version": "1.0.4",
-  "description": "A simple cli-app that allows you to divide a YouTube video into multiple separate videos base on a video's time stamps. Created using FFmpeg, ytd-core, and freetube.",
+  "name": "youtube-scissors-cli",
+  "version": "0.0.1",
+  "description": "A simple cli-app that allows you to divide a YouTube video into multiple separate videos base on a video's time stamps. Power by pkg and @Guuzzeji yt-scissors npm library",
   "main": "index.js",
   "files": [
     "fetch",
-    "ffmpeg"
+    "ffmpeg-control"
   ],
   "engines": {
     "node": ">=12"
@@ -14,17 +14,18 @@
     "youtube",
     "download",
     "video",
-    "ffmpeg"
+    "ffmpeg",
+    "cli",
+    "video-processing"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/Guuzzeji/yt-scissors-cli"
+    "url": "git://github.com/Guuzzeji/youtube-scissors-cli"
   },
   "author": "Guuzzeji <gabe.business.code@outlook.com> (https://github.com/Guuzzeji)",
   "license": "MIT",
   "dependencies": {
     "@freetube/yt-comment-scraper": "^6.1.0",
-    "@terascope/fetch-github-release": "^0.8.7",
     "chalk": "^4.1.2",
     "figlet": "^1.5.2",
     "prompts": "^2.4.2",
@@ -38,7 +39,11 @@
   "bin": "index.js",
   "pkg": {
     "assets": "node_modules/**/*",
-    "targets": [ "node14-win-x64","node14-linux-x64","node14-macos-x64" ],
+    "targets": [
+      "node14-win-x64",
+      "node14-linux-x64",
+      "node14-macos-x64"
+    ],
     "outputPath": "build"
   }
 }
