--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,11 @@
 name: tagged-release
 
-# on: workflow_dispatch
+on: workflow_dispatch
 
-on:
-  push:
-    tags:
-      - "v*"
+# on:
+#   push:
+#     tags:
+#       - "v*"
 
 jobs:
   build-release:
@@ -26,18 +26,18 @@ jobs:
       - name: Build project assets
         run: npm run build
 
-      - name: Create zip files
-      - uses: vimtor/action-zip@v1
-        with:
-          files: ./config.json ./build/youtube-scissors-cli-win.exe
-          dest: win-${{ env.RELEASE_VERSION }}.zip
+      # - name: Create zip files
+      # - uses: vimtor/action-zip@v1
+      #   with:
+      #     files: ./config.json ./build/youtube-scissors-cli-win.exe
+      #     dest: win-${{ env.RELEASE_VERSION }}.zip
 
-      - uses: vimtor/action-zip@v1
-        with:
-          files: ./config.json ./build/youtube-scissors-cli-macos
-          dest: macos-${{ env.RELEASE_VERSION }}.zip
+      # - uses: vimtor/action-zip@v1
+      #   with:
+      #     files: ./config.json ./build/youtube-scissors-cli-macos
+      #     dest: macos-${{ env.RELEASE_VERSION }}.zip
 
-      - uses: vimtor/action-zip@v1
-        with:
-          files: ./config.json ./build/youtube-scissors-cli-linux
-          dest: linux-${{ env.RELEASE_VERSION }}.zip
+      # - uses: vimtor/action-zip@v1
+      #   with:
+      #     files: ./config.json ./build/youtube-scissors-cli-linux
+      #     dest: linux-${{ env.RELEASE_VERSION }}.zip
