--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,18 +31,18 @@ jobs:
       - name: Build project assets
         run: npm run build
 
-      # - name: Create zip files
-      # - uses: vimtor/action-zip@v1
-      #   with:
-      #     files: ./config.json ./build/youtube-scissors-cli-win.exe
-      #     dest: win-${{ env.RELEASE_VERSION }}.zip
+      - name: Create zip files
+      - uses: vimtor/action-zip@v1
+        with:
+          files: ./config.json ./build/youtube-scissors-cli-win.exe
+          dest: win-${{ env.RELEASE_VERSION }}.zip
 
-      # - uses: vimtor/action-zip@v1
-      #   with:
-      #     files: ./config.json ./build/youtube-scissors-cli-macos
-      #     dest: macos-${{ env.RELEASE_VERSION }}.zip
+      - uses: vimtor/action-zip@v1
+        with:
+          files: ./config.json ./build/youtube-scissors-cli-macos
+          dest: macos-${{ env.RELEASE_VERSION }}.zip
 
-      # - uses: vimtor/action-zip@v1
-      #   with:
-      #     files: ./config.json ./build/youtube-scissors-cli-linux
-      #     dest: linux-${{ env.RELEASE_VERSION }}.zip
+      - uses: vimtor/action-zip@v1
+        with:
+          files: ./config.json ./build/youtube-scissors-cli-linux
+          dest: linux-${{ env.RELEASE_VERSION }}.zip
