--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,15 +34,15 @@ jobs:
       - name: Create zip files
       - uses: vimtor/action-zip@v1
         with:
-          files: ./config.json ./build/youtube-scissors-cli-win.exe
-          dest: win-${{ env.RELEASE_VERSION }}.zip
+          files: config.json build/youtube-scissors-cli-win.exe
+          dest: win.zip
 
       - uses: vimtor/action-zip@v1
         with:
-          files: ./config.json ./build/youtube-scissors-cli-macos
-          dest: macos-${{ env.RELEASE_VERSION }}.zip
+          files: config.json build/youtube-scissors-cli-macos
+          dest: macos.zip
 
       - uses: vimtor/action-zip@v1
         with:
-          files: ./config.json ./build/youtube-scissors-cli-linux
-          dest: linux-${{ env.RELEASE_VERSION }}.zip
+          files: config.json build/youtube-scissors-cli-linux
+          dest: linux.zip
