--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,5 +35,13 @@ jobs:
         uses: montudor/action-zip@v1
 
       - name: Zip windows build
-        run:  zip -qq -r win${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-win config.json
+        run:  zip -qq -r win${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-win config.json
+        working-directory: build
+
+      - name: Zip macos build
+        run:  zip -qq -r macos${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-macos config.json
+        working-directory: build
+
+      - name: Zip linux build
+        run:  zip -qq -r linux${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-linux config.json
         working-directory: build
