--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - "v*"
 
 jobs:
-  build:
+  build-to-release:
     runs-on: ubuntu-latest
     steps:
       - name: Set env
@@ -20,9 +20,6 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Install zip git-action package
-        uses: montudor/action-zip@v1
-
       - name: Install NPM dependencies
         run: npm ci
 
@@ -31,6 +28,9 @@ jobs:
 
       - name: Building executables
         run: npm run build
+
+      - name: Install zip git-action package
+        uses: montudor/action-zip@v1
 
       - name: Zip windows build
         run:  zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-win config.json
