--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,15 +34,12 @@ jobs:
 
       - name: Zip windows build
         run:  zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-win config.json
-        working-directory: build
 
       - name: Zip macos build
         run:  zip -qq -r macos-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-macos config.json
-        working-directory: build
 
       - name: Zip linux build
         run:  zip -qq -r linux-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-linux config.json
-        working-directory: build
 
         #Todo Create release changelog and create release
         # https://github.com/marketplace/actions/release-changelog-builder
@@ -52,10 +49,9 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GIT_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
-          title: "Development Build"
+          automatic_release_tag: ${{env.RELEASE_VERSION}}
+          prerelease: false
           files: |
-            linux-${{env.RELEASE_VERSION}}.zip
-            macos-${{env.RELEASE_VERSION}}.zip
-            win-${{env.RELEASE_VERSION}}.zip
+            ./linux-${{env.RELEASE_VERSION}}.zip
+            ./macos-${{env.RELEASE_VERSION}}.zip
+            ./win-${{env.RELEASE_VERSION}}.zip
