Fixing zip problem with exe + fixing release stuff

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: '14.x'
 
+      - name: Install zip git-action package
+        uses: montudor/action-zip@v1
+
       - name: Install NPM dependencies
         run: npm ci
 
@@ -29,27 +32,22 @@ jobs:
       - name: Building executables
         run: npm run build
 
-      - name: Install zip git-action package
-        uses: montudor/action-zip@v1
-
       - name: Zip windows build
-        run:  zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-win config.json
+        run: mv build/youtube-scissors-cli-win.exe ~/
+        run: zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-win.exe config.json
 
       - name: Zip macos build
-        run:  zip -qq -r macos-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-macos config.json
+        run: mv build/youtube-scissors-cli-macos~/
+        run:  zip -qq -r macos-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-macos config.json
 
       - name: Zip linux build
-        run:  zip -qq -r linux-${{env.RELEASE_VERSION}}.zip . -i build/youtube-scissors-cli-linux config.json
-
-        #Todo Create release changelog and create release
-        # https://github.com/marketplace/actions/release-changelog-builder
-        # https://github.com/marvinpinto/action-automatic-releases
+        run: mv build/youtube-scissors-cli-linux ~/
+        run:  zip -qq -r linux-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-linux config.json
 
       - name: Release build
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GIT_TOKEN }}"
-          automatic_release_tag: ${{env.RELEASE_VERSION}}
           prerelease: false
           files: |
             ./linux-${{env.RELEASE_VERSION}}.zip
