--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,17 +34,17 @@ jobs:
 
       - name: Zip windows build
         run: |
-          mv build/youtube-scissors-cli-win.exe ~/
+          mv ./build/youtube-scissors-cli-win.exe .
           zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-win.exe config.json
 
       - name: Zip macos build
         run: | 
-          mv build/youtube-scissors-cli-macos ~/
+          mv ./build/youtube-scissors-cli-macos .
           zip -qq -r macos-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-macos config.json
 
       - name: Zip linux build
         run: |
-          mv build/youtube-scissors-cli-linux ~/
+          mv ./build/youtube-scissors-cli-linux .
           zip -qq -r linux-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-linux config.json
 
       - name: Release build
