--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,17 +1,17 @@
 name: tagged-release
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Version Number
+        default: v1.0.0
+        required: true
 
 jobs:
   build-to-release:
     runs-on: ubuntu-latest
     steps:
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -19,6 +19,14 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.x'
+
+      - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+      - run: git config --global user.name ${{ secrets.GH_USERNAME }}
+      - run: git config --global user.email ${{ secrets.GH_EMAIL }}
+      - run: git tag ${{ github.event.inputs.version }}
+      - run: git push origin --tags
 
       - name: Install NPM dependencies
         run: npm ci
@@ -35,17 +43,17 @@ jobs:
       - name: Zip windows build
         run: |
           mv ./build/youtube-scissors-cli-win.exe .
-          zip -qq -r win-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-win.exe config.json
+          zip -qq -r win-${{ github.event.inputs.version }}.zip . -i youtube-scissors-cli-win.exe config.json
 
       - name: Zip macos build
         run: | 
           mv ./build/youtube-scissors-cli-macos .
-          zip -qq -r macos-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-macos config.json
+          zip -qq -r macos-${{ github.event.inputs.version }}.zip . -i youtube-scissors-cli-macos config.json
 
       - name: Zip linux build
         run: |
           mv ./build/youtube-scissors-cli-linux .
-          zip -qq -r linux-${{env.RELEASE_VERSION}}.zip . -i youtube-scissors-cli-linux config.json
+          zip -qq -r linux-${{ github.event.inputs.version }}.zip . -i youtube-scissors-cli-linux config.json
 
       - name: Release build
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -53,6 +61,6 @@ jobs:
           repo_token: "${{ secrets.GIT_TOKEN }}"
           prerelease: false
           files: |
-            ./linux-${{env.RELEASE_VERSION}}.zip
-            ./macos-${{env.RELEASE_VERSION}}.zip
-            ./win-${{env.RELEASE_VERSION}}.zip
+            ./linux-${{ github.event.inputs.version }}.zip
+            ./macos-${{ github.event.inputs.version }}.zip
+            ./win-${{ github.event.inputs.version }}.zip
