--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GIT_TOKEN }}
       - run: git config --global user.name ${{ secrets.GH_USERNAME }}
       - run: git config --global user.email ${{ secrets.GH_EMAIL }}
       - run: git tag ${{ github.event.inputs.version }}
