--- a/.github/workflows/bump-ytdl-core.yml
+++ b/.github/workflows/bump-ytdl-core.yml
@@ -19,3 +19,5 @@ jobs:
       - run: npm uninstall ytdl-core
       - run: npm install ytdl-core
       - run: git commit -a -m "[GIT-ACTION] Updated ytdl-core version"
+      - run: git push
+      
