--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,9 +1,6 @@
 name: "Testing"
 
-on:
-  workflow_dispatch:
-  pull_request:
-    branches: [ "main" ]
+on: [pull_request, workflow_dispatch]
 
 jobs:
   test:
