--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,7 +4,7 @@ on: [pull_request, workflow_dispatch]
 
 jobs:
   Test:
-    name: Update ytdl-core package
+    name: Testing Node.js
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v2
