--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -12,7 +12,7 @@ jobs:
           node-version: '15.x'
       
       - name: Install NPM dependencies
-        run: npm ci
+        run: npm install
 
       - name: NPM install build tools
         run: npm install pkg
