Fixing install package

--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -12,7 +12,7 @@ jobs:
           node-version: '15.x'
       
       - name: "Install All Packages"
-        run: npm cli
+        run: npm install
       
       - name: "Run Test"
         run: npm test
