--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,21 +1,17 @@
 name: "Test Build"
 
-on: [pull_request, workflow_dispatch]
+on: [pull_request, push]
 
 jobs:
   Test:
     name: Testing Build to Executables
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '15.x'
-      
-      # Applying https://stackoverflow.com/questions/58423725/github-actions-not-working-after-npm-start
-      - name: Install and Run Build
-        run: |
-          npm ci
-          npm install pkg
-          npm run build
-        env:
-          CI: true
+          node-version: '14'
+         
+      # Using https://courses.cs.northwestern.edu/394/guides/github-actions-setup.php
+      - run: npm install
+      - run: npm run build
