--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -10,8 +10,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '14.x'
          
-      # Using https://courses.cs.northwestern.edu/394/guides/github-actions-setup.php
-      - run: npm install
-      - run: npm run build
+      # (Works) Using https://courses.cs.northwestern.edu/394/guides/github-actions-setup.php
+      # Need to set node version to v14.x
+      - name: Install NPM dependencies
+        run: npm ci
+
+      - name: NPM install build tools
+        run: npm install pkg
+
+      - name: Building executables
+        run: npm run build
