--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -1,18 +1,19 @@
 name: "Testing Node.js"
 
-on: [pull_request, push]
+on: pull_request
 
 jobs:
   Test:
     name: Testing Node.js Functions
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '14'
       
       - name: "Install All Packages"
-        run: npm install
+        run: npm ci
       
       - name: "Run Test"
         run: npm run test
