Feature/unit testing (#19)
* Creating test data and generate func

Created a function to generate test data

* Adding jest to package

* Adding test command to package

* Created timestamp unit test

* Adding how to Contribute to readme

* Adding test build to Contribute

* Changing break structure of readme

* Grammer check

* Added notes to generateTestData.js

Added what not to do with test data function and added how to use it

* Cleaning up notes in generateTestData.js

* Making uniting testing important Contributewhen

* Remove added to pull request

* More spell check and word edits

* Refactor generateTestData.js

Refactor generateTestData to expand out testing data more.

* Cleaning up timestamp.test.js notes

* Added and remove items in bug_report.md (#18)

* Spell Check in docs

* Creating Testing for pull request

* Fixing workflow_dispatch error

* Trying to fix on event call in testing.yml

* Fixing run error in testing.yml

* Changing title of testing job

* Updating name of job

* Changing testing name

Changing testing name to "Testing Node.js Functions"

* Changing importance of building and testing

* Spell check timestamp.test.js

* Change node version to v15

* Adding build testing

* Changed contribute to 🤝 icon

* Fixing npm install package

* Fixing install package

* Trying to fix git action errors on npm end

* Agian trying to fix npm error

* Applying stackoverflow idea

* Again still trying to fix npm error

* Fixed Build error

* Applying fixes from test-build.yml

* Only runs on pull request

* Trying to fix testing error

# All git action stuff that works with node.js
* Update node version to 15

* Update node version to 15

* Update node version to 15

* Update node version to 15

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "build": "pkg . --compress"
+    "build": "pkg . --compress",
+    "test": "jest"
   },
   "bin": "index.js",
   "pkg": {
@@ -45,5 +46,8 @@
       "node16-macos-x64"
     ],
     "outputPath": "build"
+  },
+  "devDependencies": {
+    "jest": "^29.1.2"
   }
 }
